--- a/build.css
+++ b/build.css
@@ -7148,7 +7148,7 @@ hl {color:red;}
 
 .comp1 {}
 .showtext {}
-.bodytext{font-size:125%;    white-space: pre;}
+.bodytext{font-size:125%;}
 
 @media 
 (-webkit-min-device-pixel-ratio: 2) and (min-width: 1500px){ 
