--- a/components/6law-showtext/index.css
+++ b/components/6law-showtext/index.css
@@ -1,5 +1,5 @@
 .showtext {}
-.bodytext{font-size:125%;    white-space: pre;}
+.bodytext{font-size:125%;}
 
 @media 
 (-webkit-min-device-pixel-ratio: 2) and (min-width: 1500px){ 
